# Prerequisite-Course-Planning-Assistant-Catalog-Grounded

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data/eval/: eval_cases.json
data/samples/: sample_profile_cs.json  sample_profile_se.json
reports/: evaluation_metrics.json  evaluation_summary.md  example_transcripts.md  manual_review.csv  source_appendix.md  submission_writeup.md  submission_writeup_short.md
src/: __init__.py
src/catalog_assistant/: __init__.py  assistant.py  cli.py  config.py  embeddings.py  evaluation.py  indexing.py  ingest.py  models.py  programs.py  reporting.py  rules.py  sources.py  utils.py
