[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catalog-course-planner"
version = "0.1.0"
description = "Catalog-grounded prerequisite and course planning assistant for the Purple Merit assessment."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "chromadb>=1.5.5",
  "jinja2>=3.1.4",
  "langchain>=1.1.0",
  "langchain-community>=0.3.31",
  "langchain-groq>=1.0.0",
  "langchain-chroma>=1.0.0",
  "markdown>=3.8.2",
  "pydantic>=2.10.4",
  "pydantic-settings>=2.6.1",
  "python-dotenv>=1.0.1",
  "requests>=2.32.3",
  "sentence-transformers>=3.3.1",
  "streamlit>=1.40.2",
]

[project.scripts]
catalog-assistant = "catalog_assistant.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

